[tool.poetry]
name = "struct_pat_sandbox"
version = "0.1.0"
description = "experimenting with LinkML structured patterns"
authors = ["Mark Andrew Miller <MAM@lbl.gov>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
linkml = "^1.2.4"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
